--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -34,4 +34,9 @@
     "tailwindcss": "^3.4.19",
     "vite": "^6.0.5"
   }
+}{
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
+
